tests/baselines/reference/typeGuardOfFormIsType.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(27,1): error TS2322: Type 'string | false' is not assignable to type 'string'.
  Type 'false' is not assignable to type 'string'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(28,1): error TS2322: Type 'number | false' is not assignable to type 'number'.
  Type 'false' is not assignable to type 'number'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(29,1): error TS2322: Type 'string | false' is not assignable to type 'string'.
  Type 'false' is not assignable to type 'string'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(30,1): error TS2322: Type 'number | false' is not assignable to type 'number'.
  Type 'false' is not assignable to type 'number'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(33,1): error TS2322: Type 'number | false' is not assignable to type 'number'.
  Type 'false' is not assignable to type 'number'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(34,1): error TS2322: Type 'number | false' is not assignable to type 'number'.
  Type 'false' is not assignable to type 'number'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(35,1): error TS2322: Type 'string | false' is not assignable to type 'string'.
  Type 'false' is not assignable to type 'string'.
tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts(36,5): error TS2322: Type 'false | D1' is not assignable to type 'C2 | D1'.
  Type 'false' is not assignable to type 'C2 | D1'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardOfFormIsType.ts (8 errors) ====
    class C1 {
        p1: string;
    }
    class C2 {
        p2: number;
    }
    class D1 extends C1 {
        p3: number;
    }
    var str: string;
    var num: number;
    var strOrNum: string | number;
    
    function isC1(x: any): x is C1 {
        return true;
    }
    
    function isC2(x: any): x is C2 {
        return true;
    }
    
    function isD1(x: any): x is D1 {
        return true;
    }
    
    var c1Orc2: C1 | C2;
    str = isC1(c1Orc2) && c1Orc2.p1; // C1
    ~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string'.
!!! error TS2322:   Type 'false' is not assignable to type 'string'.
    num = isC2(c1Orc2) && c1Orc2.p2; // C2
    ~~~
!!! error TS2322: Type 'number | false' is not assignable to type 'number'.
!!! error TS2322:   Type 'false' is not assignable to type 'number'.
    str = isD1(c1Orc2) && c1Orc2.p1; // D1
    ~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string'.
!!! error TS2322:   Type 'false' is not assignable to type 'string'.
    num = isD1(c1Orc2) && c1Orc2.p3; // D1
    ~~~
!!! error TS2322: Type 'number | false' is not assignable to type 'number'.
!!! error TS2322:   Type 'false' is not assignable to type 'number'.
    
    var c2Ord1: C2 | D1;
    num = isC2(c2Ord1) && c2Ord1.p2; // C2
    ~~~
!!! error TS2322: Type 'number | false' is not assignable to type 'number'.
!!! error TS2322:   Type 'false' is not assignable to type 'number'.
    num = isD1(c2Ord1) && c2Ord1.p3; // D1
    ~~~
!!! error TS2322: Type 'number | false' is not assignable to type 'number'.
!!! error TS2322:   Type 'false' is not assignable to type 'number'.
    str = isD1(c2Ord1) && c2Ord1.p1; // D1
    ~~~
!!! error TS2322: Type 'string | false' is not assignable to type 'string'.
!!! error TS2322:   Type 'false' is not assignable to type 'string'.
    var r2: C2 | D1 = isC1(c2Ord1) && c2Ord1; // C2 | D1
        ~~
!!! error TS2322: Type 'false | D1' is not assignable to type 'C2 | D1'.
!!! error TS2322:   Type 'false' is not assignable to type 'C2 | D1'.